--- a/CloudDevWebSite/homepagePic.css
+++ b/CloudDevWebSite/homepagePic.css
@@ -6,7 +6,7 @@
 
 body {
     background-image: url("homepagePicture.jpeg");
-    background-size: cover;
+    background-size: contain;
     background-position: center;
     background-attachment: fixed;
     background-repeat: no-repeat;
