--- a/CloudDevWebSite/Site.Master
+++ b/CloudDevWebSite/Site.Master
@@ -40,16 +40,19 @@
 
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
             <div class="container">
-                <a class="navbar-brand" runat="server" href="~/">Application name</a>
+                <a class="navbar-brand" runat="server" href="~/">The Ride You Rent</a>
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Toggle navigation" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/About">About</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/HomePage">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/CarPage">Car Details</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/InspectorPage">Inspector Details</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/DriverPage">Driver Details</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/rentalPage">Rental Details</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/returnalPage">Returnal Details</a></li>
                     </ul>
                 </div>
             </div>
@@ -59,7 +62,7 @@
             </asp:ContentPlaceHolder>
             <hr />
             <footer>
-                <p>&copy; <%: DateTime.Now.Year %> - My ASP.NET Application</p>
+                <p>&copy; <%: DateTime.Now.Year %> - The Rent You Ride Application</p>
             </footer>
         </div>
     </form>
