--- a/CloudDevWebSite/homepagePic.css
+++ b/CloudDevWebSite/homepagePic.css
@@ -4,13 +4,7 @@
     font-family: 'poppins',sans-serif;
 }
 
-body {
-    background-image: url("homepagePicture.jpeg");
-    background-size: contain;
-    background-position: center;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-}
+
 
 
 
@@ -24,24 +18,12 @@ body {
     border-radius: 10px;
     padding: 20px;
     text-align: center;
+    margin-bottom: 20px;
 }
 
 
 
-.table {
-    margin-top: 300px; /* Adjust the value as needed */
-}
 
-.column {
-    width: 150px; /* Fixed width for each column */
-}
-
-.table-row {
-    height: 200px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 
 
 
