Function for data changes added

--- a/CloudDevWebSite/carpagePic.css
+++ b/CloudDevWebSite/carpagePic.css
@@ -12,3 +12,16 @@ body {
     background-repeat: no-repeat;
 }
 
+.gridView {
+    display: block;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(255,255,255,0.6);
+    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    padding: 20px;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
