Added validation and cleaner query and fixed formatting and pictures

--- a/CloudDevWebSite/driverpagePic.css
+++ b/CloudDevWebSite/driverpagePic.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-image: url("driverPage.jpeg");
+    background-image: url("driverPage.jpg");
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
