--- a/CloudDevWebSite/images.css
+++ b/CloudDevWebSite/images.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-image: url("loginPagePic.jpeg");
+    background-image: url("welcomePage.jpg");
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
