--- a/CloudDevWebSite/returnalpagePic.css
+++ b/CloudDevWebSite/returnalpagePic.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-image: url("returnalPage.jpeg");
+    background-image: url("returnalPage.jpg");
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
