--- a/CloudDevWebSite/rentalpagePic.css
+++ b/CloudDevWebSite/rentalpagePic.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-image: url("rentalPage.jpeg");
+    background-image: url("rentalPage.jpg");
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
